# okey_cards

./: .gitignore  README.md  build_exe.bat  build_mac.sh  main.py  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: build-exe.yml  build-mac.yml
okey_gui/: __init__.py  widgets.py  window.py
okey_logic/: __init__.py  game.py  session.py  solver.py
