[project]
name = "okey-solver"
version = "1.0.0"
description = "Okey card game solver with probability-based AI advisor"
requires-python = ">=3.10"
dependencies = []   # stdlib only (tkinter ships with Python)

[project.scripts]
okey = "main:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]
dev   = ["ruff", "mypy"]

# ── Ruff (linter + formatter) ─────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]   # line-length handled by formatter

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
